--- a/pt50active/index.html
+++ b/pt50active/index.html
@@ -79,10 +79,9 @@
 <div class="row">
 <div class="col-lg-12">
 <nav class="navbar navbar-expand-lg">
-<a class="navbar-brand" href="index.html">
+<a class="navbar-brand" href="PT50Active.exe">
 <img src="assets/images/tools.png" alt="Logo">
 </a>
-<a class="main-btn" data-scroll-nav="0" href="PT50Active.exe">Download</a>
 </nav> 
 </div>
 </div> 
